--- a/csl-libvirt-amd64/Vagrantfile
+++ b/csl-libvirt-amd64/Vagrantfile
@@ -32,6 +32,7 @@ Vagrant.configure("2") do |config|
       node.vm.network "forwarded_port", guest: 80, host:"80#{i}", protocol: "tcp", guest_ip: "10.13.37.#{i}"
       node.vm.network "forwarded_port", guest: 22, host:"22#{i}", protocol: "tcp", guest_ip: "10.13.37.#{i}" 
       node.vm.network "forwarded_port", guest: 443, host:"43#{i}", protocol: "tcp", guest_ip: "10.13.37.#{i}"
+      node.vm.network "forwarded_port", guest: 8080, host:"88#{i}", protocol: "tcp", guest_ip: "10.13.37.#{i}"
       node.vm.network :private_network,
         :ip => "10.13.37.#{i}",
         :libvirt__network_name => "csl-vagrant-lab",
