csl-libvirt-amd64: add parallel option when creating the lab.

--- a/csl-libvirt-amd64/Makefile
+++ b/csl-libvirt-amd64/Makefile
@@ -32,7 +32,7 @@ ubuntu-deps:
 	sudo virsh pool-start vagrant_images
 
 up:
-	vagrant up
+	vagrant up --parallel
 
 destroy:
 	vagrant destroy -f --parallel
